crates/durable-lambda-macro/tests/ui/fail_wrong_return_type.stderr
error: #[durable_execution] return type must be Result<serde_json::Value, DurableError> — found non-Result type
 --> tests/ui/fail_wrong_return_type.rs:5:68
  |
5 | async fn handler(event: serde_json::Value, ctx: DurableContext) -> String {
  |                                                                    ^^^^^^

warning: unused import: `durable_lambda_core::context::DurableContext`
 --> tests/ui/fail_wrong_return_type.rs:1:5
  |
1 | use durable_lambda_core::context::DurableContext;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
